<resources>
    <string name="app_name" />
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number">number</string>
    <string name="cod">Cod</string>
    <string name="chat">Chat</string>
    <string name="frequency">Frequency:</string>
    <string name="total">Total:</string>
    <string name="address">Address:</string>
    <string name="po_code">PO Code:</string>
    <string name="city">City:</string>
    <string name="county">County:</string>
    <string name="name">Name</string>
    <string name="stock">Stock:</string>
    <string name="price">Price:</string>
    <string name="go_back">Go back</string>
    <string name="order_drugs">order drugs</string>
    <string name="order_history">order history</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="doctor">Doctor</string>
    <string name="total_price">Total price:</string>
    <string name="order">Order</string>
    <string name="county_c">County</string>
    <string name="city_c">City</string>
    <string name="po_code_c">PO Code</string>
    <string name="address_c">Address</string>
    <string name="full_name">Full name</string>
    <string name="list_order">List order</string>
    <string name="user_id">User ID</string>
    <string name="list_drugsid_separated_by_commas">List DrugsID (separated by commas)</string>
    <string name="no_of_boxes_same_order_separated_by_commas">No. of boxes, same order (separated by commas)</string>
    <string name="frequency_same_order_separated_by_commas">Frequency, same order (separated by commas)</string>
    <string name="send_prescription">Send prescription</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="add">Add</string>
    <string name="drug_price">Drug price</string>
    <string name="drug_stock">Drug stock</string>
    <string name="drug_code">Drug code</string>
    <string name="drug_description">Drug description</string>
    <string name="drug_name">Drug name</string>
    <string name="add_patient">add patient</string>
    <string name="add_drugs">add drugs</string>
    <string name="send_prescription_c">send prescription</string>
    <string name="account_details">account details</string>
    <string name="log_out">Log out</string>
    <string name="new_stock_value">New stock value</string>
    <string name="drug_id">Drug ID</string>
    <string name="add_patient_c">Add patient</string>
    <string name="patient_id">Patient ID</string>
    <string name="expand_menu">Expand menu</string>
    <string name="add_drug">Add drug</string>
    <string name="add_stock">Add stock</string>
    <string name="last_name_c">Last name:</string>
    <string name="user_id_c">User ID:</string>
    <string name="email_c">Email:</string>
    <string name="first_name_c">First name:</string>
    <string name="username_c">Username:</string>
</resources>