<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.doctorActivity">

    <include
        android:id="@+id/include6"
        layout="@layout/user_toolbar" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="618dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include6"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/buttonAddDrugsDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_drugs" />

        <Button
            android:id="@+id/buttonAddPatientDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_patient" />

        <Button
            android:id="@+id/buttonSendPrescriptionDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_prescription_c" />

        <Button
            android:id="@+id/buttonAccountDetailsDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_details" />

        <Button
            android:id="@+id/LogOutDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>