<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.menu_doctor.interfaceAdd">
    <include
        android:id="@+id/include2"
        layout="@layout/back_toolbar"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        tools:ignore="UnknownIdInLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="169dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drug_name" />

        <EditText
            android:id="@+id/etNewDrugName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drug_description" />

        <EditText
            android:id="@+id/etNewDrugDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drug_code" />

        <EditText
            android:id="@+id/etNewDrugCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:importantForAutofill="no"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drug_stock" />

        <EditText
            android:id="@+id/etNewDrugStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:importantForAutofill="no"
            tools:ignore="Autofill,LabelFor"  />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drug_price" />

        <EditText
            android:id="@+id/etNewDrugPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:importantForAutofill="no"
            tools:ignore="Autofill,LabelFor" />

        <Button
            android:id="@+id/buttonAddDrug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <TextView
            android:id="@+id/tvNewDrugError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>