<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.menu_doctor.newPrescription">

    <include
        android:id="@+id/include4"
        layout="@layout/back_toolbar" />

    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="482dp"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include4">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_id" />

        <EditText
            android:id="@+id/etUserPrescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:ignore="LabelFor"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_drugsid_separated_by_commas" />

        <EditText
            android:id="@+id/etDrugsId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_of_boxes_same_order_separated_by_commas" />

        <EditText
            android:id="@+id/etDrugsNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:importantForAutofill="no"
            tools:ignore="LabelFor,TextFields"/>

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frequency_same_order_separated_by_commas" />

        <EditText
            android:id="@+id/etDrugsFrequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:importantForAutofill="no"
            tools:ignore="LabelFor,TextFields"/>

        <Button
            android:id="@+id/buttonSendPrescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_prescription" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>