<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.menu_doctor.addStock">
    <include
        android:id="@+id/include2"
        layout="@layout/back_toolbar" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="MissingConstraints">


        <Space
            android:layout_width="match_parent"
            android:layout_height="220dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/drug_id" />

        <EditText
            android:id="@+id/drugIdToChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text=""
            android:importantForAutofill="no"
            tools:ignore="Autofill,LabelFor" />


        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/new_stock_value" />

        <EditText
            android:id="@+id/stockValueNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text=""
            android:importantForAutofill="no"
            tools:ignore="Autofill,LabelFor"  />

        <Button
            android:id="@+id/buttonAddStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/add_stock" />

        <TextView
            android:id="@+id/tvErrorAddStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>