<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.menu_doctor.addDrugs">

    <include
        android:id="@+id/include"
        layout="@layout/back_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ListView
        android:id="@+id/lvDrugs"
        android:layout_width="0dp"
        android:layout_height="617dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/expand_button"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@color/purple_200"
        android:clickable="true"
        android:focusable="true"
        android:tint="@color/white"
        app:layout_anchorGravity="end|bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/fab_expand_button"
        android:contentDescription="@string/expand_menu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addDrugExpanded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/expand_button"
        app:layout_constraintEnd_toEndOf="@+id/expand_button"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        android:focusable="true"
        android:tint="@color/white"
        app:srcCompat="@drawable/add_newdrug"
        android:contentDescription="@string/add_drug" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addStockExpanded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:visibility="gone"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/addDrugExpanded"
        app:layout_constraintEnd_toEndOf="@+id/addDrugExpanded"
        android:focusable="true"
        android:tint="@color/white"
        app:srcCompat="@drawable/add_stock"
        android:contentDescription="@string/add_stock" />


</androidx.constraintlayout.widget.ConstraintLayout>
